--- a/Otter/Practices/Practice.storyboard
+++ b/Otter/Practices/Practice.storyboard
@@ -106,7 +106,7 @@
                                 <rect key="frame" x="123" y="609" width="34" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gHu-tq-8GK">
+                            <pickerView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gHu-tq-8GK">
                                 <rect key="frame" x="1" y="217" width="375" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <connections>
