--- a/Otter/Goals/Base.lproj/Goal.storyboard
+++ b/Otter/Goals/Base.lproj/Goal.storyboard
@@ -460,7 +460,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Th-Dh-Ft9">
-                                <rect key="frame" x="0.0" y="9" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="12" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textAttributes key="titleTextAttributes">
                                     <color key="textColor" white="0.26117621530000001" alpha="1" colorSpace="calibratedWhite"/>
@@ -559,7 +559,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b09-zz-oQI">
-                                <rect key="frame" x="0.0" y="11" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="15" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textAttributes key="titleTextAttributes">
                                     <color key="textColor" white="0.26117621530000001" alpha="1" colorSpace="calibratedWhite"/>
@@ -818,7 +818,7 @@
                                 </connections>
                             </button>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6xD-31-U90">
-                                <rect key="frame" x="0.0" y="12" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="15" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textAttributes key="titleTextAttributes">
                                     <color key="textColor" white="0.26117621530000001" alpha="1" colorSpace="calibratedWhite"/>
@@ -951,7 +951,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3L7-0f-JEk">
-                                <rect key="frame" x="1" y="10" width="375" height="44"/>
+                                <rect key="frame" x="1" y="15" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textAttributes key="titleTextAttributes">
                                     <color key="textColor" white="0.26117621530000001" alpha="1" colorSpace="calibratedWhite"/>
@@ -2797,12 +2797,12 @@ lcMAAZXIAAAAAAAABAEAAAAAAAAAVgAAAAAAAAAAAAAAAAABlco
         <image name="practice.png" width="299" height="251"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="cnb-OT-0PM"/>
         <segue reference="vtk-Sh-EEz"/>
         <segue reference="8jR-cL-f9Y"/>
         <segue reference="HF5-Be-0LR"/>
         <segue reference="GuB-Jw-lMw"/>
         <segue reference="XqA-aS-H0Q"/>
         <segue reference="CeE-Ia-Zjq"/>
-
     </inferredMetricsTieBreakers>
 </document>
